# puistoseurantaPublic

./: README.md  app.ini  app.sqlite  dht11-asennus.sh  dht11-sensor.py  liikesensori.py  setup.cfg  setup.py  sqlite-fetch.sh  wsgi.py
Nettisivu/: Lozzi.json  Puistoseuranta.html  paasivu.css  paasivu.js  tausta
app/: __init__.py  authentication.py  db.py  laskuri.py  post.py  schema.sql  yllapito.py
app/static/: Json_Request.py  Maija.json  Piato.json  paasivu.js  ruuhkaTaulukko.py  tyyli.css
app/templates/: Puistoseuranta.html  base.html  lisaa.html
app/templates/authentication/: kirjaudu.html
app/templates/db/: tietokanta.html
app/templates/yllapito/: index.html
sensori-GP2Y0A60SZLF/: kalibrointi.ino
sensori-VL53L1X/: VL53L1X-sensor.py  change_addresses.py  reset.py  test.py
tests/: conftest.py  data.sql  test_db.py
