[metadata]
name = app
version = 0.5.0
description = Project to measure the amount of visitors in a restaurant

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    flask

[options.extras_require]
test = 
    pytest
    coverage

[tool:pytest]
testpaths = tests 

[coverage:run]
branch = True
source = 
    app